	  implemementation of memcpy from Daniel Vik is now available (this is
	  from http://www.danielvik.com/2010/02/fast-memcpy-in-c.html).
	* lib/strings/lib_memset.c: CONFIG_MEMSET_OPTSPEED will select a
	  version of memset() optimized for speed.  By default, memset() is
	  optimized for size.
	* lib/strings/lib_memset.c: CONFIG_MEMSET_64BIT will perform 64-bit
	  aligned memset() operations.
	* arch/arm/src/stm32/stm32_adc.c:  Need to put the ADC back into the
	  initial reset in the open/setup logic.  Opening the ADC driver works
	  the first time, but not the second because the device is left in a
	  powered down state on the last close.
	* configs/olimex-lpc1766stck/scripts:  Replace all of the identical
	  ld.script files with the common one in this directory.
	* configs/stm3220g-eval/scripts:  Replace all of the identical
	  ld.script files with the common one in this directory.
	* configs/hymini-stm32v/scripts:  Replace all of the identical
	  ld.script files with the common one in this directory.
	* configs/lpcxpresso-lpc1768/scripts:  Replace all of the identical
	  ld.script files with the common one in this directory.
	* binfmt/elf.c, binfmt/libelf, include/elf.h, include/nuttx/elf.h: Add
	  basic framework for loadable ELF module support.  The initial check-
	  in is non-functional and is simply the framework for ELF support.
	* include/nuttx/binfmt.h, nxflat.h, elf.h, and symtab.h:  Moved to
	  include/nuttx/binfmt/.
	* arch/sim/src/up_elf.c and arch/x86/src/common/up_elf.c:  Add
	  for ELF modules.
	* arch/arm/include/elf.h:  Added ARM ELF header file.
	* include/elf32.h:  Renamed elf.h to elf32.h.
	* configs/stm32f4discovery/ostest:  Converted to use the new
	  Kconfig-based configuration system.
	* configs/stm32f4discovery/elf and configs/stm32f4discovery/scripts/gnu-elf.ld
	  Add a configuration for testing the ARM ELF loader.
	* binfmt/libelf:  Can't use fstat(). NuttX does not yet support it.  Damn!