@@ -160,6 +160,7 @@ LDNXFLATFLAGS = -e main -s 2048
 
 # ELF module definitions
 
+CELFFLAGS = $(CFLAGS) -mlong-calls
 LDELFFLAGS = -r -e main
 ifeq ($(WINTOOL),y)
   LDELFFLAGS += -T "${shell cygpath -w $(TOPDIR)/configs/$(CONFIG_ARCH_BOARD)/scripts/gnu-elf.ld}"
