@@ -179,7 +179,7 @@ CONFIG_STM32_USART2=y
 CONFIG_STM32_JTAG_SW_ENABLE=y
 # CONFIG_STM32_FORCEPOWER is not set
 # CONFIG_ARCH_BOARD_STM32_CUSTOM_CLOCKCONFIG is not set
-# CONFIG_STM32_CCMEXCLUDE is not set
+CONFIG_STM32_CCMEXCLUDE=y
 
 #
 # USB Host Configuration
@@ -251,7 +251,7 @@ CONFIG_SDCLONE_DISABLE=y
 # CONFIG_SCHED_WAITPID is not set
 # CONFIG_SCHED_ATEXIT is not set
 # CONFIG_SCHED_ONEXIT is not set
-CONFIG_USER_ENTRYPOINT="ostest_main"
+CONFIG_USER_ENTRYPOINT="elf_main"
 CONFIG_DISABLE_OS_API=y
 # CONFIG_DISABLE_CLOCK is not set
 # CONFIG_DISABLE_POSIX_TIMERS is not set
@@ -387,6 +387,7 @@ CONFIG_ELF_ALIGN_LOG2=2
 CONFIG_ELF_STACKSIZE=2048
 CONFIG_ELF_BUFFERSIZE=128
 CONFIG_ELF_BUFFERINCR=32
+# CONFIG_ELF_CONSTRUCTORS is not set
 CONFIG_SYMTAB_ORDEREDBYNAME=y
 
 #
@@ -409,7 +410,7 @@ CONFIG_ARCH_LOWPUTC=y
 CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_ARCH_ROMGETC is not set
 # CONFIG_ARCH_OPTIMIZED_FUNCTIONS is not set
-# CONFIG_HAVE_CXX is not set
+CONFIG_HAVE_CXX=y
 # CONFIG_HAVE_CXXINITIALIZE is not set
 # CONFIG_CXX_NEWLONG is not set
 
