@@ -3522,3 +3522,5 @@
 	* configs/stm32f4discovery/elf and configs/stm32f4discovery/scripts/gnu-elf.ld
 	  Add a configuration for testing the ARM ELF loader.
 	* binfmt/libelf:  Can't use fstat(). NuttX does not yet support it.  Damn!
+	* binfmt/libelf:  The basic ELF module execution appears fully functional.
+
